--- a/app/src/main/res/layout/list_item_room_control.xml
+++ b/app/src/main/res/layout/list_item_room_control.xml
@@ -21,15 +21,38 @@
 
 
         <TextView
-            android:id="@+id/quality_string"
+            android:id="@+id/room_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="Attic"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:roomControlString="@{room}"
+            tools:text="Attic" />
+
+        <Button
+            android:id="@+id/button_turn_on_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:text="Turn On"
+            app:layout_constraintStart_toEndOf="@+id/room_name"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/button_turn_off_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            android:text="Turn Off"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:roomControlString="@{room}" />
+            app:layout_constraintStart_toEndOf="@+id/button_turn_on_list"
+            app:layout_constraintTop_toTopOf="@+id/button_turn_on_list" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
