--- a/app/src/main/res/layout/fragment_switch_add_room.xml
+++ b/app/src/main/res/layout/fragment_switch_add_room.xml
@@ -74,7 +74,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editText_turnoff_key"
-            android:onClick="@{() -> viewModel.onSubmitClicked()}"/>
+            android:onClick="@{(view) -> viewModel.onSubmitClicked(view)}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
