--- a/app/src/main/res/layout/fragment_switch_add_room.xml
+++ b/app/src/main/res/layout/fragment_switch_add_room.xml
@@ -31,7 +31,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="textCapWords"
             android:hint="Room Name"
             android:text="@={viewModel.roomName}"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="text"
             android:hint="Turn On Key"
             android:text="@={viewModel.turnOnKey}"
             app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +57,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="text"
             android:hint="Turn Off Key"
             android:text="@={viewModel.turnOffKey}"
             app:layout_constraintStart_toStartOf="parent"
