--- a/app/src/main/res/layout/fragment_switch_add_room.xml
+++ b/app/src/main/res/layout/fragment_switch_add_room.xml
@@ -63,6 +63,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/editText_turnon_key" />
 
+        <EditText
+            android:id="@+id/editText_webhook"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
+            android:ems="10"
+            android:inputType="text"
+            android:hint="Webhook API Key"
+            android:text="@={viewModel.webhookApiKeyLiveData}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/editText_turnoff_key" />
+
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
@@ -73,7 +87,7 @@
             android:text="Add Room"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText_turnoff_key"
+            app:layout_constraintTop_toBottomOf="@+id/editText_webhook"
             android:onClick="@{(view) -> viewModel.onSubmitClicked(view)}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
