--- a/app/src/main/res/layout/fragment_switch_add_room.xml
+++ b/app/src/main/res/layout/fragment_switch_add_room.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="Add New Room"
+            android:text="@string/add_new_room_title_string"
             android:textSize="48sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -32,7 +32,7 @@
             android:layout_marginTop="16dp"
             android:ems="10"
             android:inputType="textCapWords"
-            android:hint="Room Name"
+            android:hint="@string/add_room_name_hint"
             android:text="@={viewModel.roomName}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/add_new_room_title" />
@@ -45,7 +45,7 @@
             android:layout_marginTop="16dp"
             android:ems="10"
             android:inputType="text"
-            android:hint="Turn On Key"
+            android:hint="@string/add_turn_on_key_hint"
             android:text="@={viewModel.turnOnKey}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/editText_roomname" />
@@ -58,7 +58,7 @@
             android:layout_marginTop="16dp"
             android:ems="10"
             android:inputType="text"
-            android:hint="Turn Off Key"
+            android:hint="@string/add_turn_off_key_hint"
             android:text="@={viewModel.turnOffKey}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/editText_turnon_key" />
@@ -72,7 +72,7 @@
             android:layout_marginTop="16dp"
             android:ems="10"
             android:inputType="text"
-            android:hint="Webhook API Key"
+            android:hint="@string/add_webhook_key_hint"
             android:text="@={viewModel.webhookApiKeyLiveData}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/editText_turnoff_key" />
@@ -84,7 +84,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="Add Room"
+            android:text="@string/add_room_submit_button_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editText_webhook"
