--- a/app/src/main/res/layout/fragment_switch_control.xml
+++ b/app/src/main/res/layout/fragment_switch_control.xml
@@ -52,7 +52,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
-                    android:text="Smart Lighting Room Controls"
+                    android:text="@string/controls_list_header_text"
                     android:textAlignment="center"
                     android:textSize="32sp"
                     android:textStyle="bold"
