Add click listener to the recyclerview item that navigates to edit screen

--- a/app/src/main/res/layout/list_item_room_control.xml
+++ b/app/src/main/res/layout/list_item_room_control.xml
@@ -7,12 +7,16 @@
         <variable
             name="room"
             type="com.caseytmorris.orroifttt.database.RoomControl" />
+        <variable
+            name="clickListener"
+            type="com.caseytmorris.orroifttt.switchcontrol.RoomControlListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:onClick="@{() -> clickListener.onClick(room)}">
 
 
         <TextView
