--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -12,10 +12,18 @@
         tools:layout="@layout/fragment_switch_control" >
         <action
             android:id="@+id/action_switch_control_fragment_to_switchAddRoomFragment"
-            app:destination="@id/switchAddRoomFragment" />
+            app:destination="@id/switchAddRoomFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
         <action
             android:id="@+id/action_switchControlFragment_to_switchEditRoomFragment"
-            app:destination="@id/switchEditRoomFragment" />
+            app:destination="@id/switchEditRoomFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
     <fragment
         android:id="@+id/switchAddRoomFragment"
@@ -24,7 +32,11 @@
         tools:layout="@layout/fragment_switch_add_room" >
         <action
             android:id="@+id/action_switchAddRoomFragment_to_switchControlFragment"
-            app:destination="@id/switchControlFragment" />
+            app:destination="@id/switchControlFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
     <fragment
         android:id="@+id/switchEditRoomFragment"
@@ -36,7 +48,11 @@
             app:argType="long" />
         <action
             android:id="@+id/action_switchEditRoomFragment_to_switchControlFragment"
-            app:destination="@id/switchControlFragment" />
+            app:destination="@id/switchControlFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
 
 </navigation>
