--- a/app/src/main/res/layout/fragment_switch_control.xml
+++ b/app/src/main/res/layout/fragment_switch_control.xml
@@ -24,7 +24,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="16dp"
+                android:paddingBottom="80dp"
                 android:clipToPadding="true"
                 tools:context=".switchcontrol.SwitchControlFragment">
 
@@ -53,8 +53,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:text="@string/controls_list_header_text"
-                    android:textSize="32sp"
-                    android:textStyle="bold"
+                    style="@style/TextAppearance.MaterialComponents.Headline4"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="@string/controls_list_header_text" />
