--- a/app/src/main/res/layout/list_item_room_control.xml
+++ b/app/src/main/res/layout/list_item_room_control.xml
@@ -38,8 +38,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
-                android:textAllCaps="true"
-                android:textSize="14sp"
+                style="@style/CardRoomName"
                 app:layout_constraintBottom_toBottomOf="@+id/edit_icon"
                 app:layout_constraintEnd_toStartOf="@+id/edit_icon"
                 app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +62,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="4dp"
                 android:text="@string/turn_on_button_text"
-                android:textSize="12sp"
+                style="@style/CardButton"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/edit_icon" />
@@ -76,7 +75,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
                 android:text="@string/turn_off_button_text"
-                android:textSize="12sp"
+                style="@style/CardButton"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/edit_icon" />
