--- a/app/src/main/res/layout/fragment_switch_control.xml
+++ b/app/src/main/res/layout/fragment_switch_control.xml
@@ -87,7 +87,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
             android:layout_margin="16dp"
-            app:srcCompat="@drawable/ic_plus_24px" />
+            app:srcCompat="@drawable/ic_plus_24px"
+            android:backgroundTint="@color/secondaryDarkColor"
+            app:borderWidth="0dp"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
