Add validation for API webhook key

--- a/app/src/main/res/layout/fragment_switch_add_room.xml
+++ b/app/src/main/res/layout/fragment_switch_add_room.xml
@@ -104,12 +104,12 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@={viewModel.webhookApiKeyLiveData}"
+                android:text="@={viewModel._webhookApiKeyLiveData}"
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/add_room_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -117,9 +117,20 @@
             android:layout_marginEnd="16dp"
             android:text="@string/add_room_submit_button_text"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editText_webhook"
             android:onClick="@{(view) -> viewModel.onSubmitClicked(view)}"/>
+
+        <Button
+            android:id="@+id/validate_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="Validate"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editText_webhook"
+            android:onClick="@{(view) -> viewModel.onValidateClicked(view)}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
