Add empty list message on main page

--- a/app/src/main/res/layout/fragment_switch_add_room.xml
+++ b/app/src/main/res/layout/fragment_switch_add_room.xml
@@ -46,6 +46,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:inputType="textCapWords"
                     android:text="@={viewModel.roomName}"
                     />
             </com.google.android.material.textfield.TextInputLayout>
